--- a/src/pages/Viewer.module.css
+++ b/src/pages/Viewer.module.css
@@ -20,25 +20,25 @@
   position: relative;
   display: block;
   width: 100%;
-  height: 20rem;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   margin-bottom: var(--basis_x4);
+  height: 20rem;
 }
 @media (max-width: 1000px) {
-  .app .coverphoto{
-    height: 16rem;
+  .coverphoto{
+    height: 17rem;
   }
 }
 @media (max-width: 800px) {
-  .app .coverphoto{
-    height: 10rem;
+  .coverphoto{
+    height: 11rem;
   }
 }
 @media (max-width: 500px) {
-  .app .coverphoto{
-    height: 7rem;
+  .coverphoto{
+    height: 8rem;
   }
 }
 
