--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   --purple-dark-rgb: 20, 0, 34;
 
   --alpha-more: 0.8;
-  --alpha-less: 0.12;
+  --alpha-less: 0.2;
 
   --blur: 20px;
 
@@ -440,6 +440,19 @@ button.hasIcon .icon.image {
 }
 button.hasIcon span{
   vertical-align: middle;
+}
+
+.clickable_card {
+  cursor: pointer;
+
+  background-color: rgba(var(--on-background-rgb), 0);
+  box-shadow: 0 0 0 var(--basis_x2) rgba(var(--on-background-rgb), 0);
+
+  transition: background-color 0.2s ease, box-shadow 0.2s ease;
+}
+.clickable_card:hover {
+  background-color: rgba(var(--on-background-rgb), var(--alpha-less));
+  box-shadow: 0 0 0 var(--basis_x2) rgba(var(--on-background-rgb), var(--alpha-less));
 }
 
 hr {
