--- a/src/components/view/ViewerPageCard.module.css
+++ b/src/components/view/ViewerPageCard.module.css
@@ -1,3 +1,13 @@
+.coverphoto {
+  display: block;
+  height: var(--basis_x16);
+  width: var(--basis_x64);
+  max-width: 100%;
+  background-position: center;
+  background-size: cover;
+  margin-bottom: var(--basis);
+}
+
 .icon {
   display: inline-block;
   height: calc(var(--font-add) + var(--basis));
