--- a/src/pages/Chooser.module.css
+++ b/src/pages/Chooser.module.css
@@ -1,26 +1,5 @@
-.chooserInput {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.chooserInput input[type=text] {
-  flex-grow: 1;
-  min-width: 0;
-}
-.chooserInput.hideSubmitButton input[type=text] {
-  margin-right: 0;
-}
-
-.chooserInput button {
-  margin-right: 0;
-}
-
-@media (max-width: 600px) {
-  .chooserInput .domainPrefix{
-    display: none;
-  }
-  .chooserInput input[type=text] {
-    margin-left: 0;
-  }
+.content {
+  width: 1000px;
+  max-width: 100%;
+  margin: 0 auto;
 }
