--- a/src/components/view/ViewerPersonCard.module.css
+++ b/src/components/view/ViewerPersonCard.module.css
@@ -7,6 +7,7 @@
   background-position: center;
   background-size: cover;
   margin-right: var(--basis);
+  box-shadow: var(--image-frame-line);
 }
 .name {
   vertical-align: middle;
