--- a/src/index.css
+++ b/src/index.css
@@ -118,6 +118,7 @@ html {
 
   --input-background: var(--background);
   --constant-button-color: var(--background);
+  --image-frame-line: inset 0 0 0 1px rgba(var(--on-background-contrast), var(--alpha-less));
 }
 @media (prefers-color-scheme: dark) {
   html {
@@ -131,6 +132,7 @@ html {
 
     --input-background: var(--background);
     --constant-button-color: var(--background-contrast);
+    --image-frame-line: inset 0 0 0 1px rgba(var(--on-background-rgb), var(--alpha-less));
   }
 }
 
