--- a/src/index.css
+++ b/src/index.css
@@ -446,16 +446,22 @@ button.hasIcon span{
 }
 
 .clickable_card {
+  position: relative;
   cursor: pointer;
+}
+.clickable_card:before {
+  content: '';
+  position: absolute;
+  top: calc(-2 * var(--basis));
+  right: calc(-2 * var(--basis));
+  bottom: calc(-2 * var(--basis));
+  left: calc(-2 * var(--basis));
 
   background-color: rgba(var(--on-background-rgb), 0);
-  box-shadow: 0 0 0 var(--basis_x2) rgba(var(--on-background-rgb), 0);
-
-  transition: background-color 0.2s ease, box-shadow 0.2s ease;
+  transition: background-color 0.2s ease;
 }
-.clickable_card:hover {
+.clickable_card:hover:before {
   background-color: rgba(var(--on-background-rgb), var(--alpha-less));
-  box-shadow: 0 0 0 var(--basis_x2) rgba(var(--on-background-rgb), var(--alpha-less));
 }
 
 hr {
