--- a/src/components/Repeater.module.css
+++ b/src/components/Repeater.module.css
@@ -29,7 +29,7 @@
 
   opacity: 0;
   pointer-events: none;
-  transition: opacity 0.2s ease;
+  transition: opacity var(--timing);
 }
 .row .middleActions:hover .content{
   opacity: 1;
