--- a/src/components/edit/ContentEditor.module.css
+++ b/src/components/edit/ContentEditor.module.css
@@ -42,7 +42,7 @@
     }
     .row .dragHandleButton {
       opacity: 0;
-      transition: opacity 0.2s ease-in-out;
+      transition: opacity var(--timing);
     }
     .row .item:hover .dragHandleButton {
       opacity: 1;
