--- a/src/components/edit/IconPicker.module.css
+++ b/src/components/edit/IconPicker.module.css
@@ -86,7 +86,7 @@
 @media (any-hover: hover) {
   .changeIconButton {
     opacity: 0.1;
-    transition: transform 0.2s ease-in-out, opacity 0.2s ease-in-out;
+    transition: transform var(--timing), opacity var(--timing);
   }
   .root.iconIsNotSet .changeIconButton,
   .icon:hover .changeIconButton {
