--- a/src/pages/App.module.css
+++ b/src/pages/App.module.css
@@ -11,6 +11,9 @@
   background: var(--background);
   color: var(--on-background);
 }
+.app.isStartpage {
+  background: var(--background-contrast);
+}
 @media (max-width: 1000px) {
   .app {
     padding: var(--basis_x2);
