--- a/src/index.css
+++ b/src/index.css
@@ -294,6 +294,10 @@ input[type="url"] {
   box-shadow: var(--input-box-shadow);
   transition: box-shadow var(--timing);
 }
+.inputBorder {
+  --input-box-shadow: inset 0 0 0 var(--basis_x0_2) var(--on-background-contrast);
+  box-shadow: var(--input-box-shadow);
+}
 textarea.inverted,
 div[contentEditable=true].inverted,
 input[type="text"].inverted,
