--- a/src/components/edit/HtmlInput.module.css
+++ b/src/components/edit/HtmlInput.module.css
@@ -2,7 +2,7 @@
   display: block;
   white-space: pre-wrap;
   word-break: break-word;
-  background: transparent !important;
+  /* background: transparent !important; */
 }
 
 .rebuild_textarea.show_placeholder:before {
