--- a/src/pages/Editor.module.css
+++ b/src/pages/Editor.module.css
@@ -1,3 +1,31 @@
+.app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  text-align: center;
+
+  min-height: 100vh;
+}
+.app.spine_aligned {
+  text-align: unset;
+  align-items: flex-start;
+}
+.app.spine_aligned:dir(rtl) {
+  align-items: flex-start;
+}
+
+.app .contentWrapper{
+  width: 1000px;
+  max-width: 100%;
+  margin: 0 auto;
+}
+@media (max-width: 800px) {
+  .app .contentWrapper{
+    width: 100%;
+  }
+}
+
 .editor {
   transition: opacity var(--timing);
 }
