renamed Action to Automation
this is to not confuse the action property in the block with the whole block

--- a/src/components/view/ViewerAutomationCard.module.css
+++ b/src/components/view/ViewerAutomationCard.module.css
@@ -21,9 +21,15 @@
 .title {
   vertical-align: middle;
   font-weight: bold;
+  line-height: 1;
+  margin-bottom: var(--basis);
 }
 
 .iconLine {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+}
+.iconLine p {
+  margin: 0;
+  word-break: break-all;
 }
