made pages and person lines don't overflow

--- a/src/components/view/ViewerPersonCard.module.css
+++ b/src/components/view/ViewerPersonCard.module.css
@@ -13,4 +13,8 @@
 .name {
   vertical-align: middle;
   font-weight: bold;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
