--- a/src/components/view/ViewerPageLine.module.css
+++ b/src/components/view/ViewerPageLine.module.css
@@ -12,4 +12,8 @@
   vertical-align: middle;
   font-weight: bold;
   line-height: 1;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
