--- a/src/components/BlockTree.module.css
+++ b/src/components/BlockTree.module.css
@@ -8,11 +8,11 @@
 @media (any-hover: hover) {
   @media (min-width: 1200px) {
     .blockRow .blockRowActions {
-      opacity: 0;
-      transition: opacity var(--timing);
+      display: none;
     }
     .blockRow:hover .blockRowActions {
-      opacity: 1;
+      display: flex;
+      align-items: stretch;
     }
   }
 }
