adjusted the font-size for the Viewers to fit more text
This mainly effects the Sidebar.
TODO: The font-size should be used everywhere

--- a/src/components/view/ViewerPageLine.module.css
+++ b/src/components/view/ViewerPageLine.module.css
@@ -12,6 +12,7 @@
   vertical-align: middle;
   font-weight: bold;
   line-height: 1;
+  font-size: calc(3.5 * var(--basis));
 
   white-space: nowrap;
   overflow: hidden;
