--- a/src/components/SidebarContent.module.css
+++ b/src/components/SidebarContent.module.css
@@ -55,3 +55,13 @@
   margin-top: 0;
   margin-bottom: 0;
 }
+
+.scrollContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+}
