--- a/src/components/view/ViewerPageCard.module.css
+++ b/src/components/view/ViewerPageCard.module.css
@@ -10,8 +10,8 @@
 
 .icon {
   display: inline-block;
-  height: calc(var(--font-add) + var(--basis));
-  width: calc(var(--font-add) + var(--basis));
+  height: calc(5 * var(--basis)) !important;
+  width: calc(5 * var(--basis)) !important;
   vertical-align: middle;
   background-position: center;
   background-size: cover;
