--- a/src/pages/Viewer.module.css
+++ b/src/pages/Viewer.module.css
@@ -69,6 +69,7 @@
   width: var(--icon-size);
   height: var(--icon-size);
 }
+/*
 .icon:after {
   content: '';
   position: absolute;
@@ -80,6 +81,7 @@
   background-size: cover;
   border-radius: 100%;
 }
+*/
 .icon.coverphotoIsSet{
   margin-top: calc(calc(-0.5 * var(--icon-size-multiplier)) * var(--basis)) !important;
 }
