--- a/src/pages/Editor.module.css
+++ b/src/pages/Editor.module.css
@@ -19,6 +19,7 @@
   width: 1000px;
   max-width: 100%;
   margin: 0 auto;
+  padding-bottom: var(--basis_x16);
 }
 @media (max-width: 800px) {
   .app .contentWrapper{
@@ -27,6 +28,8 @@
 }
 
 .editor {
+  min-height: 100vh;
+  padding: var(--basis_x4);
   transition: opacity var(--timing);
 }
 .editor.loadingContent {
