--- a/src/pages/Viewer.module.css
+++ b/src/pages/Viewer.module.css
@@ -104,6 +104,7 @@
   width: 1000px;
   max-width: 100%;
   margin: 0 auto;
+  padding-bottom: var(--basis_x16);
 }
 @media (max-width: 800px) {
   .app .contentWrapper,
@@ -123,5 +124,6 @@
 }
 
 .viewer {
+  min-height: 100vh;
   padding: var(--basis_x4);
 }
