--- a/src/components/edit/PermissionsEditor.module.css
+++ b/src/components/edit/PermissionsEditor.module.css
@@ -1,19 +1,16 @@
-.dialogsWrapper {
+.dialog {
   position: relative;
   top: 50%;
   left: 50%;
   transform: translate3d(-50%, -50%, 0);
 
-  width: auto;
-  max-width: 100%;
+  width: 600px;
+  max-width: calc(100% - var(--basis_x8));
   max-height: calc(100% - var(--basis_x8));
-  padding-top: var(--basis_x8);
 
   overflow: auto;
   -webkit-overflow-scrolling: touch;
-}
 
-.dialog {
   padding: var(--basis_x8);
   background: var(--background);
   margin-bottom: var(--basis_x8);
@@ -44,10 +41,16 @@
 
 .inputWrapper {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
 }
-.inputWrapper .emailInput {
+.inputWrapper .input {
   flex-grow: 1;
+}
+
+.actions {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 .permissionRow {
@@ -76,7 +79,3 @@
   margin: 0 0 0 var(--basis);
 }
 
-.actions {
-  display: flex;
-  justify-content: flex-end;
-}
