allow transparent icons

--- a/src/components/edit/IconPicker.module.css
+++ b/src/components/edit/IconPicker.module.css
@@ -16,7 +16,7 @@
 
 .icon {
   position: relative;
-  background-color: var(--background-contrast);
+  /* background-color: var(--background-contrast); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
