made hr-divider a bit taller

--- a/src/index.css
+++ b/src/index.css
@@ -521,7 +521,7 @@ button.hasIcon span{
 hr {
   margin: var(--basis_x4) 0;
   border: none;
-  height: var(--basis_x0_2);
+  height: var(--basis);
   background: var(--on-background);
 }
 
