--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
   --white: #fff;
   --white-rgb: 255, 255, 255;
+  --on-white: #502379;
   --grey: #ede8f1;
   --grey-rgb: 237, 232, 241;
   --dark-grey: #aa94c0;
@@ -8,8 +9,10 @@
 
   --purple: #502379;
   --purple-rgb: 80, 35, 121;
+  --on-purple: #fff;
   --purple-dark: #140022;
   --purple-dark-rgb: 20, 0, 34;
+  --on-purple-dark: #fff;
 
   --alpha-more: 0.8;
   --alpha: 0.6;
@@ -18,12 +21,16 @@
   --blur: 20px;
 
   --yellow: #FDC220;
+  --yellow-rgb: 253, 194, 32;
   --on-yellow: #fff;
   --green: #1BBE6F;
+  --green-rgb: 27, 190, 111;
   --on-green: #fff;
   --blue: #82D0F4;
-  --on-blue: #fff;
+  --blue-rgb: 130, 208, 244;
+  --on-blue: #000;
   --red: #E63E12;
+  --red-rgb: 230, 62, 18;
   --on-red: #fff;
 
   --timing: .2s ease-in-out;
