--- a/src/components/edit/IconPicker.module.css
+++ b/src/components/edit/IconPicker.module.css
@@ -21,12 +21,14 @@
   background-position: center;
   background-repeat: no-repeat;
 
-  border-radius: 1000px;
   margin-bottom: calc(-16 * var(--basis));
 
   --icon-size: calc(64 * var(--basis));
   width: var(--icon-size);
   height: var(--icon-size);
+}
+.root.icon_type_url .icon {
+  border-radius: 1000px;
 }
 /*
 .icon:after {
@@ -82,6 +84,11 @@
   height: auto;
   background-color: transparent;
   display: none;
+}
+
+.root .icon .emojiWrapper img {
+  width: 100%;
+  height: 100%;
 }
 
 @media (any-hover: hover) {
