--- a/src/components/view/ViewerLine.module.css
+++ b/src/components/view/ViewerLine.module.css
@@ -15,6 +15,10 @@
   border-radius: 100px;
   box-shadow: var(--image-frame-line);
 }
+.icon img {
+  width: 100%;
+  height: 100%;
+}
 .title {
   vertical-align: middle;
   font-weight: bold;
