corrected the icon position to match the editor

--- a/src/pages/Viewer.module.css
+++ b/src/pages/Viewer.module.css
@@ -87,7 +87,7 @@
 }
 */
 .icon.coverphotoIsSet{
-  margin-top: calc(calc(-0.5 * var(--icon-size-multiplier)) * var(--basis)) !important;
+  margin-top: calc((-2 + (-0.5 * var(--icon-size-multiplier))) * var(--basis)) !important;
 }
 @media (max-width: 800px) {
   .icon{
