inverted the <kbd /> colors

--- a/src/index.css
+++ b/src/index.css
@@ -166,8 +166,8 @@ kbd {
   padding: var(--basis_x0_2) var(--basis_x0_5);
   margin: 0 var(--basis_x0_2);
   border-radius: var(--basis_x0_5);
-  background: var(--on-background);
-  color: var(--background);
+  background: rgba(var(--background-rgb), var(--alpha));
+  color: var(--on-background);
   font-weight: bold;
 }
 
