--- a/src/components/view/ViewerLine.module.css
+++ b/src/components/view/ViewerLine.module.css
@@ -1,9 +1,21 @@
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+
+  font-size: calc(0.8 * var(--body-font-size));
+}
+
 .title {
   vertical-align: middle;
   font-weight: bold;
-  font-size: calc(0.8 * var(--body-font-size));
 
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.additionalInfos {
+  opacity: var(--alpha);
 }
