--- a/src/index.css
+++ b/src/index.css
@@ -126,6 +126,9 @@ html {
   --on-background: var(--purple);
   --on-background-rgb: var(--purple-rgb);
   --on-background-contrast: var(--purple-dark);
+  --shadow-color: var(--purple);
+  --shadow-color-rgb: var(--purple-rgb);
+  --shadow-color-rgba: rgba(var(--purple-rgb), var(--alpha-less));
 
   --input-background: var(--background);
   --constant-button-color: var(--background);
@@ -140,6 +143,9 @@ html {
     --on-background: var(--white);
     --on-background-rgb: var(--white-rgb);
     --on-background-contrast: var(--dark-grey);
+    --shadow-color: var(--purple-dark);
+    --shadow-color-rgb: var(--purple-dark-rgb);
+    --shadow-color-rgba: rgba(var(--purple-dark-rgb), var(--alpha-less));
 
     --input-background: var(--background);
     --constant-button-color: var(--background-contrast);
