--- a/src/components/SearchBox.module.css
+++ b/src/components/SearchBox.module.css
@@ -28,7 +28,7 @@
     max-height: calc(100% - var(--basis_x8));
   }
 }
-@media (max-width: 600px) or (max-height: 600px) {
+@media (max-width: 600px), (max-height: 600px) {
   .dialog {
     top: 0;
     max-height: 100%;
