--- a/src/components/SearchBox.module.css
+++ b/src/components/SearchBox.module.css
@@ -31,6 +31,7 @@
 @media (max-width: 600px), (max-height: 600px) {
   .dialog {
     top: 0;
+    height: 100%;
     max-height: 100%;
     max-width: 100%;
     border-radius: 0;
