fix: made the icon in the editor round again

--- a/src/components/edit/IconPicker.module.css
+++ b/src/components/edit/IconPicker.module.css
@@ -26,6 +26,8 @@
   --icon-size: calc(64 * var(--basis));
   width: var(--icon-size);
   height: var(--icon-size);
+
+  border-radius: 1000px;
 }
 .root.icon_type_url .icon {
   border-radius: 1000px;
