--- a/src/index.css
+++ b/src/index.css
@@ -199,11 +199,11 @@ h1,
 
 h2,
 .type_h2 {
-  font-size: calc(var(--font-add) + var(--basis_x2));
+  font-size: calc(var(--font-add) + calc(3 * var(--basis)));
   margin: var(--basis_x4) 0 var(--basis) 0;
   text-decoration: inherit;
   font-weight: bold;
-  --prefix-icon-size: calc(var(--font-add) + var(--basis_x2));
+  --prefix-icon-size: calc(var(--font-add) + calc(3 * var(--basis)));
 }
 
 h3,
