--- a/src/components/SidebarContent.module.css
+++ b/src/components/SidebarContent.module.css
@@ -65,3 +65,13 @@
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
 }
+
+h2 {
+  display: flex;
+  align-items: center;
+  gap: var(--basis_x2);
+}
+h2 .emoji {
+  width: calc(6 * var(--basis));
+  height: calc(6 * var(--basis));
+}
