--- a/src/components/view/BlockIcon.module.css
+++ b/src/components/view/BlockIcon.module.css
@@ -4,6 +4,7 @@
   width: var(--body-font-size) !important;
   vertical-align: middle;
   background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
   margin-right: calc(0.5 * var(--body-font-size));
   flex-shrink: 0;
